--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.25.0",
+    "cookies-next": "^2.0.3",
+    "jsonwebtoken": "^8.5.1",
     "next": "12.0.9",
+    "nookies": "^2.5.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.25.1"
   },
   "devDependencies": {
     "eslint": "8.7.0",
